[package]
name = "druid"
version = "0.1.0"
edition = "2024"

[lib]
bench = false
[dependencies]
chrono = "0.4.40"
rand = "0.9.0"
rand_chacha = "0.9.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "rayon"] }
cuid = "1.3.3"
cuid2-rs = "0.1.0"
[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = ["v4"]

[[bench]]
name = "druid"
harness = false
